--- a/examples/irishfest/v3/main.css
+++ b/examples/irishfest/v3/main.css
@@ -295,8 +295,8 @@ body {
 .lineup .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr 2fr;
-      grid-template-rows: 1fr 2fr;
+  -ms-grid-rows: 1fr 4fr;
+      grid-template-rows: 1fr 4fr;
   height: 100vh;
   font-family: 'Comfortaa', sans-serif;
 }
@@ -321,6 +321,7 @@ body {
   -ms-grid-rows: max-content 1fr;
       grid-template-rows: -webkit-max-content 1fr;
       grid-template-rows: max-content 1fr;
+  font-family: 'Comfortaa', sans-serif;
 }
 
 .lineup .container .lineup-container .header {
@@ -338,6 +339,17 @@ body {
 }
 
 .lineup .container .lineup-container .band-container {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.lineup .container .lineup-container .band-container .bands {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.lineup .container .lineup-container .band-container .bands .stage-section-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -347,38 +359,66 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.lineup .container .lineup-container .band-container .bands {
+.lineup .container .lineup-container .band-container .bands .stage-section-container .header {
+  font-size: 20pt;
+}
+
+.lineup .container .lineup-container .band-container .bands .stage-section-container .stage-section {
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 30vw;
+      grid-template-columns: 30vw;
+  gap: 16px;
 }
 
-.lineup .container .lineup-container .band-container .bands .item {
+.lineup .container .lineup-container .band-container .bands .stage-section-container .stage-section .item {
   display: -ms-grid;
   display: grid;
       grid-template-areas: "a b" "a c";
+  -ms-grid-columns: min-content 1fr;
+      grid-template-columns: -webkit-min-content 1fr;
+      grid-template-columns: min-content 1fr;
+  -ms-grid-rows: 1fr min-content;
+      grid-template-rows: 1fr -webkit-min-content;
+      grid-template-rows: 1fr min-content;
   gap: 8px;
+  overflow: hidden;
+  border-radius: 6px;
+  background: #51be5e;
+  -webkit-box-shadow: 0 3px 0 #00000040;
+          box-shadow: 0 3px 0 #00000040;
+  text-align: left;
 }
 
-.lineup .container .lineup-container .band-container .bands .item .image {
+.lineup .container .lineup-container .band-container .bands .stage-section-container .stage-section .item .image {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: a;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
 }
 
-.lineup .container .lineup-container .band-container .bands .item .title {
+.lineup .container .lineup-container .band-container .bands .stage-section-container .stage-section .item .title {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: b;
-  font-size: 20pt;
+  padding: 2px 0 0 0;
+  font-size: 30pt;
 }
 
-.lineup .container .lineup-container .band-container .bands .item .description {
+.lineup .container .lineup-container .band-container .bands .stage-section-container .stage-section .item .description {
   -ms-grid-row: 2;
   -ms-grid-column: 2;
   grid-area: c;
+  padding: 10px 0;
   font-size: 16pt;
 }
 /*# sourceMappingURL=main.css.map */
