--- a/examples/irishfest/v3/main.scss
+++ b/examples/irishfest/v3/main.scss
@@ -291,151 +291,5 @@ body {
 
 
 .lineup {
-	.container {
-		// layout
-		display: grid;
-		grid-template-rows: 1fr 4fr;
-	
-		// positioning
-		height: 100vh;
-
-		// text
-		font-family: 'Comfortaa', sans-serif;
-
-
-		.sponsors {
-			// layout
-			display: flex;
-			justify-content: center;
-			align-items: center;
-
-			// styling
-			background: lightgray;
-
-			// text
-			font-size: 30pt;
-		}
-
-
-		.lineup-container {
-			// layout
-			display: grid;
-			grid-template-rows: max-content 1fr;
-
-			// text
-			font-family: 'Comfortaa', sans-serif;
-
-
-
-			.header {
-				// layout
-				display: flex;
-				justify-content: center;
-				align-items: center;
-
-				// position
-				padding: 30px;
-
-				// text
-				font-size: 30pt;
-			}
-
-
-			.band-container {
-				// // layout
-				// display: flex;
-				// justify-content: center;
-				// align-items: center;
-
-				// text
-				font-family: 'Source Sans Pro', sans-serif;
-
-
-
-				.bands {
-					// layout
-					display: grid;
-					grid-template-columns: 1fr 1fr;
-
-
-					.stage-section-container {
-						// layout
-						display: flex;
-						justify-content: center;
-						align-items: center;
-						flex-direction: column;
-
-
-						.header {
-							// text
-							font-size: 20pt;
-						}
-
-
-						.stage-section {
-							// layout
-							display: grid;
-							grid-template-columns: 30vw;
-							gap: 16px;
-
-
-							.item {
-								// layout
-								display: grid;
-								grid-template-areas:
-									"a b"
-									"a c";
-								grid-template-columns: min-content 1fr;
-								grid-template-rows: 1fr min-content;
-								gap: 8px;
-								overflow: hidden;
-		
-								// position
-								// padding: 10px;
-								border-radius: 6px;
-								
-								// styling
-								background: #51be5e;
-								box-shadow: 0 3px 0 #00000040;
-		
-								// text
-								text-align: left;
-		
-								
-								.image {
-									// layout
-									grid-area: a;
-									width: min-content
-								}
-			
-			
-								.title {
-									// layout
-									grid-area: b;
-
-									// position
-									padding: 2px 0 0 0;
-
-									// text
-									font-size: 30pt;
-								}
-		
-		
-								.description {
-									// layout
-									grid-area: c;
-
-									// position
-									padding: 10px 0;
-		
-									// text
-									font-size: 16pt;
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+	.container {}
 }
