--- a/examples/josh/main.css
+++ b/examples/josh/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Rose:wght@700&display=swap");
 body {
   background: #f2f2f2;
   height: 100vh;
@@ -15,10 +16,42 @@ body {
   height: 100%;
 }
 
+.container .menu-container {
+  background: white;
+  position: absolute;
+  height: 100vh;
+  width: 300px;
+  top: 0;
+  left: -260px;
+}
+
+.container .menu-container .menu-button {
+  background: black;
+  color: white;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  height: 40px;
+  padding: 0 50px;
+  margin-right: -77px;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  font-family: 'Red Rose', cursive;
+  font-size: 30px;
+}
+
+.container .end-bar {
+  background: white;
+  position: absolute;
+  height: 100vh;
+  width: 40px;
+  top: 0;
+  right: 0;
+}
+
 .container .slide-container {
   width: 100vw;
   height: 95vh;
-  overflow-x: scroll;
   overflow-y: hidden;
 }
 
