--- a/examples/josh/main.scss
+++ b/examples/josh/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@700&display=swap');
+
 body {
 	// colors
 	background: hsl(0, 0, 95);
@@ -20,12 +22,66 @@ body {
 	height: 100%;
 
 
+	.menu-container {
+		// color
+		background: white;
+
+		// layout
+		position: absolute;
+
+		height: 100vh;
+		width: 300px;
+
+		top: 0;
+		left: -260px;
+
+
+		.menu-button {
+			// color
+			background: black;
+			color: white;
+
+			// layout
+			position: absolute;
+
+			top: 50%;
+			right: 0;
+
+			height: 40px;
+
+			padding: 0 50px;
+			margin-right: -77px;
+
+			transform: rotate(-90deg);
+
+			// text
+			font-family: 'Red Rose', cursive;
+			font-size: 30px
+		}
+	}
+
+
+	.end-bar {
+		// color
+		background: white;
+
+		// layout
+		position: absolute;
+
+		height: 100vh;
+		width: 40px;
+
+		top: 0;
+		right: 0;
+	}
+
+
 	.slide-container {
 		// layout
 		width: 100vw;
 		height: 95vh;
 
-		overflow-x: scroll;
+		// overflow-x: scroll;
 		overflow-y: hidden;
 
 
