--- a/examples/josh/main.css
+++ b/examples/josh/main.css
@@ -74,5 +74,13 @@ body {
   background: #bfbfbf;
   width: 1200px;
   height: 100%;
+  overflow: hidden;
+}
+
+.container .slide-container .slide .item img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=main.css.map */
