--- a/examples/josh/main.scss
+++ b/examples/josh/main.scss
@@ -102,6 +102,15 @@ body {
 				// layout
 				width: 1200px;
 				height: 100%;
+
+				overflow: hidden;
+
+
+				img {
+					object-fit: cover;
+					width: 100%;
+					height: 100%;
+				}
 			}
 		}
 	}
