--- a/examples/josh/main.scss
+++ b/examples/josh/main.scss
@@ -35,6 +35,13 @@ body {
 		top: 0;
 		left: -260px;
 
+		transition: left 0.2s;
+
+
+		&:hover {
+			left: 0;
+		}
+
 
 		.menu-button {
 			// color
@@ -58,6 +65,7 @@ body {
 			font-family: 'Red Rose', cursive;
 			font-size: 30px
 		}
+
 	}
 
 
