--- a/examples/josh/main.scss
+++ b/examples/josh/main.scss
@@ -54,10 +54,10 @@ body {
 			top: 50%;
 			right: 0;
 
-			height: 40px;
+			height: 41px;
 
 			padding: 0 50px;
-			margin-right: -77px;
+			margin-right: -78px;
 
 			transform: rotate(-90deg);
 
@@ -89,7 +89,7 @@ body {
 		width: 100vw;
 		height: 95vh;
 
-		// overflow-x: scroll;
+		overflow-x: hidden;
 		overflow-y: hidden;
 
 
