--- a/examples/josh/main.scss
+++ b/examples/josh/main.scss
@@ -86,8 +86,10 @@ body {
 
 	.slide-container {
 		// layout
-		width: 100vw;
+		width: calc(100vw - 80px);
 		height: 95vh;
+
+		margin-left: 40px;
 
 		overflow-x: hidden;
 		overflow-y: hidden;
