Main landing page is now under construction

--- a/main.css
+++ b/main.css
@@ -1,1 +1,11 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  background: url("assets/img/stars2.gif");
+  margin: 0;
+}
+
+.wrapper {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}/*# sourceMappingURL=main.css.map */
