--- a/examples/irishfest/v3/main.css
+++ b/examples/irishfest/v3/main.css
@@ -1,23 +1,8 @@
 body {
-  background: -webkit-gradient(linear, left top, right top, from(#42ad4e), to(#ff9a00));
-  background: linear-gradient(90deg, #42ad4e 0%, #ff9a00 100%);
+  background: linear-gradient(90deg, rgb(66, 173, 78) 0%, rgb(255, 154, 0) 100%);
   background-size: 1800% 1800%;
-  -webkit-animation: rainbow 60s ease infinite;
-          animation: rainbow 60s ease infinite;
+  animation: rainbow 60s ease infinite;
 }
-
-@-webkit-keyframes rainbow {
-  0% {
-    background-position: 0% 82%;
-  }
-  50% {
-    background-position: 100% 19%;
-  }
-  100% {
-    background-position: 0% 82%;
-  }
-}
-
 @keyframes rainbow {
   0% {
     background-position: 0% 82%;
@@ -37,8 +22,7 @@ body {
   width: 100vw;
   height: 3px;
   z-index: 10;
-  background: -webkit-gradient(linear, left top, right top, from(#42ad4e), color-stop(25%, #42ad42), color-stop(25%, #ff9a00), color-stop(50%, #ff9a00), color-stop(50%, #42ad4e), color-stop(75%, #42ad42), color-stop(75%, #ff9a00), to(#ff9a00));
-  background: linear-gradient(90deg, #42ad4e 0%, #42ad42 25%, #ff9a00 25%, #ff9a00 50%, #42ad4e 50%, #42ad42 75%, #ff9a00 75%, #ff9a00 100%);
+  background: linear-gradient(90deg, rgb(66, 173, 78) 0%, rgb(66, 173, 66) 25%, rgb(255, 154, 0) 25%, rgb(255, 154, 0) 50%, rgb(66, 173, 78) 50%, rgb(66, 173, 66) 75%, rgb(255, 154, 0) 75%, rgb(255, 154, 0) 100%);
 }
 
 .section {
@@ -49,52 +33,38 @@ body {
   overflow: hidden;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   -webkit-clip-path: polygon(0% 0%, 0% 95%, 50% 99.5%, 100% 95%, 100% 0%);
           clip-path: polygon(0% 0%, 0% 95%, 50% 99.5%, 100% 95%, 100% 0%);
 }
-
 .video .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  justify-content: center;
+  align-content: center;
   position: absolute;
   top: 20px;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 100%;
   height: 100px;
   text-align: center;
   z-index: 1;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
-  font-family: 'Teko', sans-serif;
+  font-family: "Teko", sans-serif;
   font-size: 30pt;
   color: white;
 }
-
 .video .header .nav {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   width: 75vw;
   font-size: 16pt;
 }
-
 @media only screen and (max-width: 700px) {
   .video .header .nav {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
   .video .header .nav .spacer {
     display: none !important;
@@ -103,116 +73,78 @@ body {
     display: none !important;
   }
 }
-
 .video .header .nav .logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-family: 'Teko', sans-serif;
+  justify-content: center;
+  align-items: center;
+  font-family: "Teko", sans-serif;
   font-size: 50pt;
   color: white;
 }
-
 .video .header .nav .links {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (max-content)[5];
-      grid-template-columns: repeat(5, -webkit-max-content);
-      grid-template-columns: repeat(5, max-content);
+  grid-template-columns: repeat(5, max-content);
   padding: 0;
   margin: 0;
-  width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   list-style: none;
 }
-
 .video .header .nav .links li {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
+  justify-content: center;
+  align-items: center;
+  transform: translateY(10px);
   height: 100px;
   padding: 0 10px;
   font-size: 20pt;
   text-align: center;
   color: #bbbbbb;
 }
-
 .video .header .nav .links li:hover img {
   width: 100%;
 }
-
 .video .header .nav .links li a {
   color: inherit;
   text-decoration: none;
 }
-
 .video .header .nav .links li.active img {
   width: 100%;
   background: white;
 }
-
 .video .header .nav .links li img {
   width: 0;
   height: 2px;
-  -webkit-transform: translateY(-20px);
-          transform: translateY(-20px);
+  transform: translateY(-20px);
   background: #bbbbbb;
   border-radius: 6px;
-  -webkit-transition: width 0.3s cubic-bezier(0.45, 0.06, 0.41, 0.71);
   transition: width 0.3s cubic-bezier(0.45, 0.06, 0.41, 0.71);
 }
-
 .video .video-overlay {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   width: 100vw;
   height: 100vh;
   top: 0;
   left: 0;
   z-index: 0;
-  background: #000000a0;
+  background: rgba(0, 0, 0, 0.6274509804);
 }
-
 .video .video-overlay .main-text {
-  display: -ms-grid;
   display: grid;
   gap: 2vw;
-  font-family: 'Comfortaa';
+  font-family: "Comfortaa";
   font-size: 5vw;
   text-align: center;
   color: white;
 }
-
 @media only screen and (max-width: 700px) {
   .video .video-overlay .main-text {
-    -ms-grid-rows: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 0;
     font-size: 12vw;
   }
@@ -223,12 +155,9 @@ body {
     font-size: 8vw;
   }
 }
-
 @media only screen and (min-width: 701px) {
   .video .video-overlay .main-text {
-    -ms-grid-columns: max-content max-content;
-        grid-template-columns: -webkit-max-content -webkit-max-content;
-        grid-template-columns: max-content max-content;
+    grid-template-columns: max-content max-content;
   }
   .video .video-overlay .main-text .featuring {
     font-size: 4vw;
@@ -237,58 +166,46 @@ body {
     font-size: 4vw;
   }
 }
-
 .video .video-overlay .main-text .month {
   font-weight: 700;
 }
-
 .video .video-overlay .main-text .date {
   font-weight: 300;
 }
-
 .video .video-overlay .main-text .featuring {
   font-weight: 300;
-  color: #ffffffaa;
+  color: rgba(255, 255, 255, 0.6666666667);
 }
-
 .video .video-overlay .main-text .band {
   font-weight: 300;
-  color: #ffffffaa;
+  color: rgba(255, 255, 255, 0.6666666667);
 }
-
 .video .video-overlay .footer {
   position: absolute;
   bottom: 5vh;
   z-index: 10;
-  font-family: 'Comfortaa';
+  font-family: "Comfortaa";
   font-size: 14pt;
   text-align: center;
-  color: #808080dd;
+  color: rgba(128, 128, 128, 0.8666666667);
 }
-
 .video .video-overlay .footer a {
-  color: #61b668dd;
+  color: rgba(97, 182, 104, 0.8666666667);
 }
-
 .video video {
   position: fixed;
   top: 0;
   left: 0;
   z-index: -1;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
-@media screen and (max-aspect-ratio: 16 / 9) {
+@media screen and (max-aspect-ratio: 16/9) {
   .video video {
     height: 100vh;
   }
 }
-
-@media screen and (min-aspect-ratio: 16 / 9) {
+@media screen and (min-aspect-ratio: 16/9) {
   .video video {
     width: 100vw;
   }
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
