--- a/main.css
+++ b/main.css
@@ -2,4 +2,17 @@ body {
   background: #1b2847;
   margin: 0;
   text-align: center;
+}
+
+.main-links {
+  text-align: left;
+}
+.main-links a {
+  color: #9ad0dc;
+  font-family: "Special Elite", cursive;
+  text-decoration: none;
+  -webkit-text-stroke: 0.3px #728dbb;
+}
+.main-links a :visited {
+  color: blue;
 }/*# sourceMappingURL=main.css.map */
