Changed the scene to make it look cooler

--- a/main.scss
+++ b/main.scss
@@ -7,7 +7,7 @@ body {
 
 
 .main-links {
-	text-align: left;
+	text-align: right;
 	a {
 		color: #9ad0dc;
 		font-family: 'Special Elite', cursive;
