--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 }
 .main-links a {
   color: #9ad0dc;
-  font-family: "Special Elite", cursive;
+  font-family: "Averia Sans Libre", cursive;
   text-decoration: none;
   transition: color 0.15s;
 }
