--- a/main.scss
+++ b/main.scss
@@ -10,9 +10,8 @@ body {
 	text-align: right;
 	a {
 		color: #9ad0dc;
-		font-family: 'Special Elite', cursive;
+		font-family: 'Averia Sans Libre', cursive;
 		text-decoration: none;
-		// -webkit-text-stroke: 0.3px #728dbb;
 
 		transition: color 0.15s;
 	
