Made the thing a bit more automatic

--- a/main.scss
+++ b/main.scss
@@ -8,6 +8,8 @@ body {
 
 .main-links {
 	text-align: right;
+	// margin-left: 50px;
+
 	a {
 		color: #9ad0dc;
 		font-family: 'Averia Sans Libre', cursive;
