--- a/apps/notfancylanding/main.scss
+++ b/apps/notfancylanding/main.scss
@@ -5,36 +5,39 @@ body {
 	text-align: center;
 }
 
-.wrapper {
-	// height: 100vh;
+
+#nojs {
+	.wrapper {
+		// height: 100vh;
+		
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	.main {
-		background: #283a64;
-		width: min-content;
-		padding: 40px;
+		.main {
+			background: #283a64;
+			width: min-content;
+			padding: 40px;
+		}
 	}
-}
-
-
-.header {
-	text-align: center;
-	color: #555578;
-
-	.title {
-		font-family: 'Caprasimo', cursive;
-		font-size: 100pt;
-		color: #888899;
-
-		text-shadow: 0px 5px 5px #1b2847;
-	}
-
-	.subtitle {
-		font-family: 'Dela Gothic One', cursive;
-		font-size: 24pt;
+	
+	
+	.header {
+		text-align: center;
 		color: #555578;
+	
+		.title {
+			font-family: "Fontdiner Swanky", serif;
+			font-size: 100pt;
+			color: #888899;
+	
+			text-shadow: 0px 5px 5px #1b2847;
+		}
+	
+		.subtitle {
+			font-family: 'Georgia', serif;
+			font-size: 24pt;
+			color: #555578;
+		}
 	}
 }
