--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -347,9 +347,14 @@ body {
 					justify-content: center;
 					align-items: center;
 
+					height: 100vh;
+
 					padding: 40px;
 
 					text-align: center;
+
+					background: url(https://iili.io/du9XzYX.jpg);
+					background-size: cover;
 
 					iframe {
 						width: 100%;
