--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,9 @@ body {
   top: 5px;
   left: 1px;
   z-index: 100;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 #signature .signaturelogo {
   width: 30px;
@@ -28,6 +31,16 @@ body {
 }
 #signature .signaturelogo:hover {
   background: url(/assets/svg/maxlvert-hover.svg) no-repeat;
+}
+#signature #taphere {
+  position: fixed;
+  width: 80px;
+  height: 80px;
+  top: 58px;
+  left: 5px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s;
 }
 
 #nav-container {
@@ -98,6 +111,12 @@ body {
   writing-mode: vertical-lr;
   transform: rotate(180deg);
 }
+#nav-container .nav .item .dark > a {
+  color: #bbbbbb;
+}
+#nav-container .nav .item .dark > a:hover {
+  color: #6f66eb;
+}
 #nav-container .nav .itemicon {
   display: flex;
   justify-content: center;
@@ -166,7 +185,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.6666666667));
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6666666667);
 }
 #wrapper .main .display #content .photo-gallery {
   display: flex;
@@ -194,7 +213,7 @@ body {
   background-image: url(https://iili.io/dTQqU91.jpg) no-repeat;
   background-size: cover;
   background-position: center center;
-  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.6666666667));
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6666666667);
 }
 #wrapper .main .display #content #photos a {
   margin-bottom: 32px;
@@ -206,7 +225,7 @@ body {
   text-align: center;
 }
 #wrapper .main .display #content #photos-street img, #wrapper .main .display #content #photos-landscape img, #wrapper .main .display #content #photos-portrait img {
-  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.6666666667));
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6666666667);
 }
 #wrapper .main .display #content #videos {
   display: flex;
@@ -221,7 +240,7 @@ body {
   height: 100%;
   aspect-ratio: 21/9;
   margin-bottom: 50px;
-  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.6666666667));
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6666666667);
 }
 #wrapper .main .display #content #about {
   display: flex;
