--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,6 +19,8 @@ body {
 	left: 1px;
 	z-index: 100;
 
+	user-select: none;
+
 	.signaturelogo {
 		width: 30px;
 		height: 50px;
@@ -42,6 +44,20 @@ body {
 			background: url(/assets/svg/maxlvert-hover.svg) no-repeat;
 			// filter: invert(24%) sepia(91%) saturate(479%) hue-rotate(85deg) brightness(93%) contrast(83%);
 		}
+	}
+
+	#taphere {
+		position: fixed;
+		width: 80px;
+		height: 80px;
+		top: 58px;
+		left: 5px;
+
+		opacity: 0;
+
+		pointer-events: none;
+
+		transition: opacity 0.5s;
 	}
 }
 
@@ -141,6 +157,11 @@ body {
 				writing-mode: vertical-lr;
 				transform: rotate(180deg);
 				// transform-origin: top left;
+			}
+
+			.dark > a {
+				color: #bbbbbb;
+				&:hover {color: #6f66eb}
 			}
 		}
 
@@ -244,7 +265,7 @@ body {
 						left: 0;
 						right: 0;
 
-						filter: drop-shadow(0px 10px 10px #000000aa);
+						box-shadow: 0px 10px 20px #000000aa;
 					}
 				}
 
@@ -282,6 +303,7 @@ body {
 					padding: 40px;
 
 					text-align: center;
+					// text-decoration: underline;
 
 					.preview-image {
 						width: 90vw;
@@ -290,7 +312,7 @@ body {
 						background-size: cover;
 						background-position: center center;
 
-						filter: drop-shadow(0px 5px 5px #000000aa);
+						box-shadow: 0px 5px 10px #000000aa;
 					}
 
 					a {
@@ -299,7 +321,7 @@ body {
 				}
 
 				/////////////////////////
-				// PHOTOS PAGE STYLING //
+				// PHOTO GALLERY PAGE STYLING //
 				/////////////////////////
 				#photos-street, #photos-landscape, #photos-portrait {
 					display: flex;
@@ -310,7 +332,7 @@ body {
 					text-align: center;
 
 					img {
-						filter: drop-shadow(0px 5px 5px #000000aa);
+						box-shadow: 0px 5px 10px #000000aa;
 					}
 				}
 
@@ -334,7 +356,7 @@ body {
 						
 						margin-bottom: 50px;
 						
-						filter: drop-shadow(0px 5px 5px #000000aa);
+						box-shadow: 0px 5px 10px #000000aa;
 					}
 				}
 
